--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "proxy": "http://localhost:8001",
   "dependencies": {
-    "@testing-library/react-hooks": "^8.0.1",
     "axios": "^0.27.2",
     "classnames": "^2.2.6",
     "normalize.css": "^8.0.1",
@@ -34,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^8.0.1",
     "@babel/core": "^7.4.3",
     "@storybook/addon-actions": "^5.0.10",
     "@storybook/addon-backgrounds": "^5.0.10",
@@ -45,7 +45,8 @@
     "cypress": "^10.6.0",
     "prop-types": "^15.8.1",
     "react-test-renderer": "^16.9.0",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "babel-loader": "^8.1.0"
   },
   "jest": {
     "watchPathIgnorePatterns": [
